--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <a href="/add_cyph">Add a Cyph</a> | <a href="/add_purchase">Add a Purchase</a> | <a href="/summary">View Summary</a>
 
     <h2>All Cyphs</h2>
+    <p>Cyph count: {{ cyph_count }}</p>
     <ul>
         {% for cyph in cyphs %}
         <li>{{ cyph.strain }} by {{ cyph.provider }} ({{ cyph.bowls }} bowls, Participants: {{ cyph.participants }})</li>
